--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "TodoApi",
+  "name": "todo-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
+  },
+  "engines": {
+    "node": "10.6.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.3"
